# FinanceManager-Pro-

./: .env.example  Jenkinsfile  README.md
.github/workflows/: backend-ci-cd.yml  django.yml  python-app.yml
backend/: .pre-commit-config.yaml  pyproject.toml  requirements.txt
backend/apps/authentication/: backends.py  schema.py  serializers.py  urls.py  views.py
backend/apps/companies/: admin.py  models.py  serializers.py  urls.py  views.py
backend/apps/invoices/: admin.py  models.py  serializers.py  urls.py  views.py
backend/apps/treasury/: admin.py  models.py  serializers.py  urls.py  views.py
backend/apps/users/: models.py
backend/config/: settings.py  urls.py
backend/core/: models.py
backend/core/migrations/: 0001_initial.py  0002_create_roles.py
